2004-09-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkpathbar.c (gtk_path_bar_size_request): Give the path
	bar arrows some more space.

	* configure.in: Check for mallinfo.

	* tests/testtreemodel.c: Only include malloc.h if HAVE_MALLINFO
	is defined.  (#153168, Darren Creutz)

	* gtk/gtkactiongroup.c: Fix typos in signal docs.  (#153224,
	John Finlay)

Mon Sep 20 19:44:58 2004  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (shortcuts_activate_iter): Don't
	return FALSE from a void function.  (#153185, Joel Fredrikson)

2004-09-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkbutton.c (gtk_button_class_init): Add a boolean ::displace-focus
	style property and apply child displacement to the focus rectangle 
	if it is TRUE.  (#141170, Soeren Sandmann)

Sun Sep 19 23:56:18 2004  Søren Sandmann  <sandmann@redhat.com>

	* gtk/gtkmenu.c (MENU_SCROLL_TIMEOUT2): Change from 50 to 20 to
	make the menus scroll faster.

2004-09-19  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.5.3 ===

2004-09-18  Matthias Clasen  <mclasen@redhat.com>

	Make GtkFileChooserButton activatable via mnemonics.
	(#152925, Dennis Cranston, patch by James M. Cape)

	* gtk/gtkfilechooserbutton.c: Add a ::mnemonic-activate signal
	and a suitable default handler.

	* tests/testfilechooserbutton.c: Add a mnemonic.

2004-09-18  Matthias Clasen  <mclasen@redhat.com>

	Fix win32 build errors.  (#153032, #153028, Robert Ögren)

	* gdk/win32/gdkmain-win32.c: Make it compile.  

	* gtk/gtkmain.c: Include glib.h.  

2004-09-18  Federico Mena Quintero  <federico@ximian.com>

	Merged from 2.4:

	* gtk/gtkfilesystem.h: Removed the GTK_FILE_PATH() and
	GTK_IS_FILE_PATH() macros.  They are not supposed to exist, as
	GtkFilePath is not an object.  And they never worked, anyway.

2004-09-18  Marco Pesenti Gritti  <marco@gnome.org>

	* gtk/gtkentry.c: (gtk_entry_completion_key_press):

	Make numeric pad enter activate the selected completion